--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <script src=”projetoExercício.js”></script>
+    <script src="projetoExercício.js"></script>
     <title> Lista de Alunos </title>
 </head>
 
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">    
-    <h1> LISTA DE ALUNOS </h1>
+    <h1> CADASTRO DE ALUNOS </h1>
     <input type="text" id="nomeAluno" placeholder ="Digite o nome do aluno">
     <button onclick="adicionarAluno()">Adicionar aluno</button>
     <h2> Lista de Alunos </h2>
