--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h1> CADASTRO DE ALUNOS </h1>
     <input type="text" id="nomeAluno" placeholder ="Digite o nome do aluno">
     <button onclick="adicionarAluno()">Adicionar aluno</button>
-    <h2> Lista de Alunos </h2>
+    <h2> LISTA DE ALUNOS </h2>
     <ul id="listaAlunos"></ul>
     </div>
     
