--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="projetoExercício.js"></script>
-    <title> Lista de Alunos </title>
+    <title> Cadastro de Alunos </title>
+    <link rel="icon" type="image/png" href="img/teste2.png">    <!-- define o icon da guia do navegador -->
 </head>
 
 
